--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ p {
 }
 
 .image1 {
-    width: 250px;
-    height: auto;
+    width: 200px;
+    height: 250px;
     display: block;
     margin: auto;
 }
